--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <h4>About Aimen Queen Gallery</h4>
                 <div class="asterisk"><i class="fas fa-asterisk"></i></div>
                 <p>
-                    Aimen Queen Gallery provides best quality jweleries at a very reasonable price and also we makes sure its customers have the best service.  
+                    Aimen Queen Gallery provides best quality jeweleries at a very reasonable price and also we makes sure its customers have the best service.  
                 </p>
             </div>
             <div class="footer-content-divider animate-bottom">
