--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="asterisk"><i class="fas fa-asterisk"></i></div>
                 </div>
                 <p>
-                    The story of Girls Gallery started in 2020.
+                    The story of Aimen Queen Gallery started in 2022.
                 </p>
                 <a href="https://www.facebook.com" class="btn body-btn">About us</a>
             </div>
